# ros1_bridge_ws

./: README.md
ros1_bridge/ros1_msg_ws/src/plusgo_msgs/: CMakeLists.txt  README.md  package.xml  readme.txt
ros1_bridge/ros1_msg_ws/src/plusgo_msgs/msg/: ImageRect.msg  Object.msg
ros1_bridge/ros2_msg_ws/src/plusgo_msgs/: CMakeLists.txt  package.xml
ros1_bridge/ros2_msg_ws/src/plusgo_msgs/msg/: Object.msg  Polygon.msg
